// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavbarBlock/> should render 1`] = `
<ContextProvider
  value={
    {
      "dragDropManager": DragDropManagerImpl {
        "backend": HTML5BackendImpl {
          "actions": {
            "beginDrag": [Function],
            "drop": [Function],
            "endDrag": [Function],
            "hover": [Function],
            "publishDragSource": [Function],
          },
          "altKeyPressed": false,
          "asyncEndDragFrameId": null,
          "currentDragSourceNode": null,
          "currentNativeHandle": null,
          "currentNativeSource": null,
          "dragEnterTargetIds": [],
          "dragOverTargetIds": null,
          "dragStartSourceIds": null,
          "dropTargetIds": [],
          "endDragIfSourceWasRemovedFromDOM": [Function],
          "endDragNativeItem": [Function],
          "enterLeaveCounter": EnterLeaveCounter {
            "entered": [],
            "isNodeInDocument": [Function],
          },
          "getSourceClientOffset": [Function],
          "handleSelectStart": [Function],
          "handleTopDragEndCapture": [Function],
          "handleTopDragEnter": [Function],
          "handleTopDragEnterCapture": [Function],
          "handleTopDragLeaveCapture": [Function],
          "handleTopDragOver": [Function],
          "handleTopDragOverCapture": [Function],
          "handleTopDragStart": [Function],
          "handleTopDragStartCapture": [Function],
          "handleTopDrop": [Function],
          "handleTopDropCapture": [Function],
          "isNodeInDocument": [Function],
          "monitor": DragDropMonitorImpl {
            "registry": HandlerRegistryImpl {
              "dragSources": Map {},
              "dropTargets": Map {},
              "pinnedSource": null,
              "pinnedSourceId": null,
              "store": {
                "@@observable": [Function],
                "dispatch": [Function],
                "getState": [Function],
                "replaceReducer": [Function],
                "subscribe": [Function],
              },
              "types": Map {},
            },
            "store": {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            },
          },
          "mouseMoveTimeoutTimer": null,
          "options": OptionsReader {
            "globalContext": [Window],
          },
          "registry": HandlerRegistryImpl {
            "dragSources": Map {},
            "dropTargets": Map {},
            "pinnedSource": null,
            "pinnedSourceId": null,
            "store": {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            },
            "types": Map {},
          },
          "sourceNodeOptions": Map {},
          "sourceNodes": Map {},
          "sourcePreviewNodeOptions": Map {},
          "sourcePreviewNodes": Map {},
        },
        "handleRefCountChange": [Function],
        "isSetUp": false,
        "monitor": DragDropMonitorImpl {
          "registry": HandlerRegistryImpl {
            "dragSources": Map {},
            "dropTargets": Map {},
            "pinnedSource": null,
            "pinnedSourceId": null,
            "store": {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            },
            "types": Map {},
          },
          "store": {
            "@@observable": [Function],
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
        },
        "store": {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
      },
    }
  }
>
  <NavbarBlock
    actions={
      [
        {
          "label": "foo",
          "onClick": [MockFunction],
        },
      ]
    }
    title="Foo"
    value="public"
  >
    foobar
  </NavbarBlock>
</ContextProvider>
`;

exports[`<NavbarBlock/> should render an icon 1`] = `
<ContextProvider
  value={
    {
      "dragDropManager": DragDropManagerImpl {
        "backend": HTML5BackendImpl {
          "actions": {
            "beginDrag": [Function],
            "drop": [Function],
            "endDrag": [Function],
            "hover": [Function],
            "publishDragSource": [Function],
          },
          "altKeyPressed": false,
          "asyncEndDragFrameId": null,
          "currentDragSourceNode": null,
          "currentNativeHandle": null,
          "currentNativeSource": null,
          "dragEnterTargetIds": [],
          "dragOverTargetIds": null,
          "dragStartSourceIds": null,
          "dropTargetIds": [],
          "endDragIfSourceWasRemovedFromDOM": [Function],
          "endDragNativeItem": [Function],
          "enterLeaveCounter": EnterLeaveCounter {
            "entered": [],
            "isNodeInDocument": [Function],
          },
          "getSourceClientOffset": [Function],
          "handleSelectStart": [Function],
          "handleTopDragEndCapture": [Function],
          "handleTopDragEnter": [Function],
          "handleTopDragEnterCapture": [Function],
          "handleTopDragLeaveCapture": [Function],
          "handleTopDragOver": [Function],
          "handleTopDragOverCapture": [Function],
          "handleTopDragStart": [Function],
          "handleTopDragStartCapture": [Function],
          "handleTopDrop": [Function],
          "handleTopDropCapture": [Function],
          "isNodeInDocument": [Function],
          "monitor": DragDropMonitorImpl {
            "registry": HandlerRegistryImpl {
              "dragSources": Map {
                "S1" => {
                  "beginDrag": [Function],
                  "canDrag": [Function],
                  "endDrag": [Function],
                  "isDragging": [Function],
                },
              },
              "dropTargets": Map {
                "T0" => {
                  "canDrop": [Function],
                  "drop": [Function],
                  "hover": [Function],
                },
              },
              "pinnedSource": null,
              "pinnedSourceId": null,
              "store": {
                "@@observable": [Function],
                "dispatch": [Function],
                "getState": [Function],
                "replaceReducer": [Function],
                "subscribe": [Function],
              },
              "types": Map {
                "T0" => "category",
                "S1" => "category",
              },
            },
            "store": {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            },
          },
          "mouseMoveTimeoutTimer": null,
          "options": OptionsReader {
            "globalContext": [Window],
          },
          "registry": HandlerRegistryImpl {
            "dragSources": Map {
              "S1" => {
                "beginDrag": [Function],
                "canDrag": [Function],
                "endDrag": [Function],
                "isDragging": [Function],
              },
            },
            "dropTargets": Map {
              "T0" => {
                "canDrop": [Function],
                "drop": [Function],
                "hover": [Function],
              },
            },
            "pinnedSource": null,
            "pinnedSourceId": null,
            "store": {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            },
            "types": Map {
              "T0" => "category",
              "S1" => "category",
            },
          },
          "sourceNodeOptions": Map {
            "S1" => null,
          },
          "sourceNodes": Map {
            "S1" => <h4
              class="category-title"
              draggable="true"
            >
              <div
                class="title"
              >
                Foo
              </div>
              <div
                class="dropdown show"
              >
                <button
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="toggle btn-transparent btn btn-secondary"
                  type="button"
                >
                  <i
                    class="material-icons"
                  >
                    add
                  </i>
                </button>
                <div
                  aria-hidden="false"
                  class="dropdown-menu dropdown-menu-right show"
                  role="menu"
                  style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
                  tabindex="-1"
                  x-placement="bottom-end"
                >
                  <button
                    class="action dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    foo
                  </button>
                </div>
              </div>
            </h4>,
          },
          "sourcePreviewNodeOptions": Map {},
          "sourcePreviewNodes": Map {},
        },
        "handleRefCountChange": [Function],
        "isSetUp": true,
        "monitor": DragDropMonitorImpl {
          "registry": HandlerRegistryImpl {
            "dragSources": Map {
              "S1" => {
                "beginDrag": [Function],
                "canDrag": [Function],
                "endDrag": [Function],
                "isDragging": [Function],
              },
            },
            "dropTargets": Map {
              "T0" => {
                "canDrop": [Function],
                "drop": [Function],
                "hover": [Function],
              },
            },
            "pinnedSource": null,
            "pinnedSourceId": null,
            "store": {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            },
            "types": Map {
              "T0" => "category",
              "S1" => "category",
            },
          },
          "store": {
            "@@observable": [Function],
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
        },
        "store": {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
      },
    }
  }
>
  <NavbarBlock
    actions={
      [
        {
          "label": "foo",
          "onClick": [MockFunction],
        },
      ]
    }
    icon="adjust"
    title="Foo"
    value="public"
  >
    foobar
  </NavbarBlock>
</ContextProvider>
`;

exports[`<NavbarBlock/> should toggle the menu on clicking the dropdown toggle 1`] = `
<DndProvider
  backend={[Function]}
>
  <NavbarBlock
    actions={
      [
        {
          "label": "foo",
          "onClick": [MockFunction],
        },
      ]
    }
    title="Foo"
    value="public"
  >
    <TicketNavbarDropTarget
      accept="category"
      canDrop={[Function]}
      className="section"
      onDrop={[Function]}
    >
      <div
        className="wrapper section"
      >
        <div
          className="category"
        >
          <h4
            className="category-title"
          >
            <div
              className="title"
            >
              Foo
            </div>
            <Dropdown
              a11y={true}
              active={false}
              addonType={false}
              direction="down"
              inNavbar={false}
              isOpen={true}
              nav={false}
              setActiveFromChild={false}
              toggle={[Function]}
            >
              <Manager>
                <div
                  className="dropdown show"
                  onKeyDown={[Function]}
                >
                  <DropdownToggle
                    aria-haspopup={true}
                    className="toggle btn-transparent"
                    color="secondary"
                    type="button"
                  >
                    <Reference>
                      <InnerReference
                        setReferenceNode={[Function]}
                      >
                        <Button
                          aria-expanded={true}
                          aria-haspopup={true}
                          className="toggle btn-transparent"
                          color="secondary"
                          innerRef={[Function]}
                          onClick={[Function]}
                          tag="button"
                          type="button"
                        >
                          <button
                            aria-expanded={true}
                            aria-haspopup={true}
                            aria-label={null}
                            className="toggle btn-transparent btn btn-secondary"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="material-icons"
                            >
                              add
                            </i>
                          </button>
                        </Button>
                      </InnerReference>
                    </Reference>
                  </DropdownToggle>
                  <DropdownMenu
                    flip={true}
                    right={true}
                    tag="div"
                  >
                    <Popper
                      placement="bottom-end"
                      positionFixed={false}
                    >
                      <InnerPopper
                        eventsEnabled={true}
                        placement="bottom-end"
                        positionFixed={false}
                        referenceElement={
                          <button
                            aria-expanded="true"
                            aria-haspopup="true"
                            class="toggle btn-transparent btn btn-secondary"
                            type="button"
                          >
                            <i
                              class="material-icons"
                            >
                              add
                            </i>
                          </button>
                        }
                      >
                        <div
                          aria-hidden={false}
                          className="dropdown-menu dropdown-menu-right show"
                          role="menu"
                          style={
                            {
                              "left": 0,
                              "opacity": 0,
                              "pointerEvents": "none",
                              "position": "absolute",
                              "top": 0,
                            }
                          }
                          tabIndex="-1"
                        >
                          <DropdownItem
                            className="action"
                            key="foo"
                            onClick={[MockFunction]}
                            tag="button"
                            toggle={true}
                          >
                            <button
                              className="action dropdown-item"
                              onClick={[Function]}
                              role="menuitem"
                              tabIndex="0"
                              type="button"
                            >
                              foo
                            </button>
                          </DropdownItem>
                        </div>
                      </InnerPopper>
                    </Popper>
                  </DropdownMenu>
                </div>
              </Manager>
            </Dropdown>
          </h4>
          foobar
        </div>
      </div>
    </TicketNavbarDropTarget>
  </NavbarBlock>
</DndProvider>
`;
